<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/language"
        android:layout_width="101dp"
        android:layout_height="50dp"
        android:text="@string/somewherelanguage"
        app:layout_constraintStart_toStartOf="@+id/numberOfPerson"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <TextView
        android:id="@+id/price"
        android:layout_width="101dp"
        android:layout_height="50dp"
        android:text="@string/somewhereprice"
        app:layout_constraintStart_toStartOf="@+id/language"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="101dp"
        android:layout_height="50dp"
        android:text="@string/language"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="101dp"
        android:layout_height="50dp"
        android:text="@string/person"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="333dp"
        android:layout_height="236dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@android:drawable/alert_light_frame" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="8dp"
        android:layout_height="68dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toTopOf="@+id/price"
        app:layout_constraintStart_toEndOf="@+id/price"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.497">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="141dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@android:drawable/alert_light_frame" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="101dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/personprice"
        app:layout_constraintEnd_toStartOf="@+id/price"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/numberOfPerson"
        android:layout_width="101dp"
        android:layout_height="50dp"
        android:text="@string/somewherepeople"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/language" />

    <TextView
        android:id="@+id/palnTime"
        android:layout_width="357dp"
        android:layout_height="29dp"
        android:layout_marginTop="12dp"
        android:text="@string/somewheredate"
        app:layout_constraintEnd_toEndOf="@+id/language"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="358dp"
        android:layout_height="124dp"
        android:background="#CCCCCC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/palnTime"
        app:layout_constraintStart_toStartOf="@+id/palnTime"
        app:layout_constraintTop_toBottomOf="@+id/palnTime"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="65dp"
        android:layout_height="26dp"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="16dp"
        android:text="@string/payment_time"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/palnTime" />

    <TextView
        android:id="@+id/paymentDate"
        android:layout_width="137dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        android:text="@string/time"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/palnTime" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="66dp"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/price_for_person"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/paymentDate" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="65dp"
        android:layout_height="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/number_of_traveler"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="150dp"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:text="@string/somewhereprice"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/paymentDate" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="152dp"
        android:layout_height="21dp"
        android:text="@string/somewherepeople"
        app:layout_constraintEnd_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="119dp"
        android:layout_height="35dp"
        android:text="@string/price"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintEnd_toStartOf="@+id/textView14" />

    <TextView
        android:id="@+id/paymentPrice"
        android:layout_width="207dp"
        android:layout_height="35dp"
        android:text="@string/somewhereprice"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="360dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:background="#CCCCCC"
        android:gravity="center"
        android:text="@string/schedule"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        tools:text="@string/ok" />

    <TextView
        android:background="#CCCCCC"
        android:id="@+id/textView"
        android:layout_width="411dp"
        android:layout_height="35dp"
        android:gravity="center"
        android:text="@string/paymentcompleted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>